--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,7 +1,7 @@
 name: ubuntu14.04-packer0.7.5
-version: 1.0.0
+version: 1.0.1
 description: Ubuntu 14.04 with Packer 0.7.5
-inherits: ubuntu12.04-webessentials
+inherits: wercker/ubuntu12.04-webessentials
 type: main
 platform: ubuntu@12.04
 keywords:
@@ -31,4 +31,3 @@ script: |
   unzip ${PACKER_VERSION}_linux_amd64.zip
   rm ${PACKER_VERSION}_linux_amd64.zip
   export PATH="$HOME/packer:$PATH"
-  
