--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,7 +1,7 @@
 name: ubuntu14.04-packer0.7.5
 version: 1.0.1
 description: Ubuntu 14.04 with Packer 0.7.5
-inherits: wercker/ubuntu12.04-webessentials
+inherits: wercker/ubuntu12.04-webessentials@1.0.4
 type: main
 platform: ubuntu@12.04
 keywords:
