--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,7 +1,6 @@
 name: ubuntu14.04-packer0.7.5
-version: 1.0.1
+version: 1.0.2
 description: Ubuntu 14.04 with Packer 0.7.5
-inherits: wercker/ubuntu12.04-webessentials@1.0.4
 type: main
 platform: ubuntu@12.04
 keywords:
@@ -11,19 +10,30 @@ keywords:
   - packer
   - aws
 packages:
+  - aws
+  - git
+  - jq
+  - wget
+  - unzip
   - ansible@1.7.1
   - packer@0.7.5  
 script: |
+  # Upgrade to Ubuntu 14.04
   sudo apt-get update
   sudo apt-get install -y update-manager-core
   sudo do-release-upgrade -f DistUpgradeViewNonInteractive -m server -d
-  sudo apt-get install -y aptitude
-  sudo apt-get safe-upgrade
+
+  # Install System Packages
+  sudo apt-get update
   sudo apt-get install -y software-properties-common
-  sudo apt-get install -y unzip jq
+  sudo apt-get install -y git jq unzip wget
+
+  # Install Ansible
   sudo add-apt-repository -y ppa:rquillo/ansible
   sudo apt-get update
   sudo apt-get install -y ansible=1.7.1-trusty-unstable-ppa
+
+  # Install Packer
   export PACKER_VERSION=0.7.5
   mkdir -p $HOME/packer
   cd $HOME/packer
@@ -31,3 +41,11 @@ script: |
   unzip ${PACKER_VERSION}_linux_amd64.zip
   rm ${PACKER_VERSION}_linux_amd64.zip
   export PATH="$HOME/packer:$PATH"
+
+  # Install AWS CLI
+  mkdir -p $HOME/aws
+  cd $HOME/aws
+  wget https://s3.amazonaws.com/aws-cli/awscli-bundle.zip
+  unzip awscli-bundle.zip
+  sudo ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+  rm -rf awscli-bundle*
