Path to packer dist.

--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -19,9 +19,9 @@ packages:
   - packer@0.7.5  
 script: |
   # Upgrade to Ubuntu 14.04
-  sudo apt-get update
-  sudo apt-get install -y update-manager-core
-  sudo do-release-upgrade -f DistUpgradeViewNonInteractive -m server -d
+  #sudo apt-get update
+  #sudo apt-get install -y update-manager-core
+  #sudo do-release-upgrade -f DistUpgradeViewNonInteractive -m server -d
 
   # Install System Packages
   sudo apt-get update
@@ -37,9 +37,9 @@ script: |
   export PACKER_VERSION=0.7.5
   mkdir -p $HOME/packer
   cd $HOME/packer
-  wget https://dl.bintray.com/mitchellh/packer/${PACKER_VERSION}_linux_amd64.zip
-  unzip ${PACKER_VERSION}_linux_amd64.zip
-  rm ${PACKER_VERSION}_linux_amd64.zip
+  wget https://dl.bintray.com/mitchellh/packer/packer_${PACKER_VERSION}_linux_amd64.zip
+  unzip packer_${PACKER_VERSION}_linux_amd64.zip
+  rm packer_${PACKER_VERSION}_linux_amd64.zip
   export PATH="$HOME/packer:$PATH"
 
   # Install AWS CLI
